# zabota

./: README.md  main.py  pyproject.toml
app/: client_openai.py  constants.py  handlers.py  history_service.py  logger.py  main.py
app/services/: client_openai.py  handlers.py  history_service.py
