[project]
name = "zabota"
version = "0.1.0"
description = ""
authors = [
    {name = "SheenShaman"}
]
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.20.0,<3.0.0)",
    "python-telegram-bot (>=22.6,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
